# tdd-with-django-and-docker

./: .coverage  .env  Dockerfile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  runtest.sh
core/: settings.py  urls.py
movies/: admin.py  models.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_movie.py  0003_remove_movie_description_movie_created_date_and_more.py  0004_alter_movie_created_date.py
tests/: test_foo.py
tests/movies/: test_model.py  test_serializer.py  test_views.py
