[tool.poetry]
name = "tdd-with-django-and-docker"
version = "0.1.0"
description = ""
authors = ["jose.tandavala <jose.tandavala@ideiasdinamicas.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
