[tool.poetry]
name = "tdd-with-django-and-docker"
version = "0.1.0"
description = ""
authors = ["jose.tandavala <jose.tandavala@ideiasdinamicas.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "^3.8"
django = "^5.1.1"
djangorestframework = "^3.15.2"
pytest-django = "^4.9.0"
pytest = "^8.3.3"
psycopg = "^3.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
